crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_union_diff_slot.stderr
error: node_pattern!: pattern parse error: `$` capture is not allowed inside `{}` / `!` / `` ` `` (the body has no definite-assignment path) (at 1..3)
 --> tests/ui/fail_node_pattern_capture_union_diff_slot.rs:5:40
  |
5 | murphy_plugin_macros::node_pattern!(m, "{$a $b}");
  |                                        ^^^^^^^^^
